tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_string.py
def compare_str_isnot() :
    n = 'hello world'
    a = 'hello world'
    return n is not a
